infra/k8s/alert-notifier.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alert-notifier
  namespace: dsbd-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alert-notifier
  template:
    metadata:
      labels:
        app: alert-notifier
    spec:
      containers:
        - name: alert-notifier
          image: alert-notifier:hw3
          imagePullPolicy: IfNotPresent

          # Prendo env generali (Kafka bootstrap + SMTP host/port/user/from/tls, ecc.)
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
