infra/k8s/alert-system.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alert-system
  namespace: dsbd-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alert-system
  template:
    metadata:
      labels:
        app: alert-system
    spec:
      containers:
        - name: alert-system
          image: alert-system:hw3
          imagePullPolicy: IfNotPresent

          # server metriche prometheus_client
          ports:
            - name: metrics
              containerPort: 8000

          readinessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 20

          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"

---
apiVersion: v1
kind: Service
metadata:
  name: alert-system
  namespace: dsbd-ns
spec:
  selector:
    app: alert-system
  type: ClusterIP
  ports:
    - name: metrics
      port: 8000
      targetPort: 8000
