infra/k8s/data-collector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-collector
  namespace: dsbd-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-collector
  template:
    metadata:
      labels:
        app: data-collector
    spec:
      containers:
        - name: data-collector
          image: data-collector:hw3
          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 5001

          readinessProbe:
            httpGet:
              path: /health
              port: 5001
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 5001
            initialDelaySeconds: 20
            periodSeconds: 20

          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"

---
apiVersion: v1
kind: Service
metadata:
  name: data-collector
  namespace: dsbd-ns
spec:
  selector:
    app: data-collector
  type: ClusterIP
  ports:
    - name: http
      port: 5001
      targetPort: 5001
