infra/k8s/kafka.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: dsbd-ns
  labels:
    app: kafka
spec:
  ports:
    - port: 9092
      name: plaintext
      targetPort: 9092
    - port: 29093
      name: controller
      targetPort: 29093
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app: kafka

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: dsbd-ns
spec:
  serviceName: "kafka"
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      securityContext:
        fsGroup: 1000

      containers:
        - name: kafka
          image: confluentinc/cp-kafka:7.4.0
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 9092
              name: plaintext
            - containerPort: 29093
              name: controller

          volumeMounts:
            - name: kafka-data
              mountPath: /var/lib/kafka/data

          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"

          startupProbe:
            exec:
              command: ["bash", "-lc", "kafka-topics --bootstrap-server localhost:9092 --list >/dev/null 2>&1"]
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 120

          livenessProbe:
            exec:
              command: ["bash", "-lc", "kafka-topics --bootstrap-server localhost:9092 --list >/dev/null 2>&1"]
            initialDelaySeconds: 20
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 15

          readinessProbe:
            exec:
              command: ["bash", "-lc", "kafka-topics --bootstrap-server localhost:9092 --list >/dev/null 2>&1"]
            initialDelaySeconds: 20
            periodSeconds: 15
            timeoutSeconds: 15
            failureThreshold: 15

  volumeClaimTemplates:
    - metadata:
        name: kafka-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
