infra/k8s/user-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-db
  namespace: dsbd-ns
  labels:
    app: user-db
spec:
  ports:
    - port: 5432
      name: postgres
  clusterIP: None # Headless Service (we need it for StatefulSet)
  selector:
    app: user-db

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: user-db
  namespace: dsbd-ns
spec:
  serviceName: "user-db"
  replicas: 1
  selector:
    matchLabels:
      app: user-db
  template:
    metadata:
      labels:
        app: user-db
    spec:
      containers:
        - name: postgres
          image: postgres:16
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 5432
              name: postgres

          volumeMounts:
            - name: user-db-data
              mountPath: /var/lib/postgresql/data

          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            # limits:
            #   memory: "512Mi"
            #   cpu: "500m"

          startupProbe:
            exec:
              command: ["sh", "-c", "pg_isready -U postgres -d ${POSTGRES_DB} -h 127.0.0.1 -p 5432"]
            periodSeconds: 10
            failureThreshold: 60
            timeoutSeconds: 5

          livenessProbe:
            exec:
              command: ["sh", "-c", "pg_isready -U postgres -d ${POSTGRES_DB} -h 127.0.0.1 -p 5432"]
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 5

          readinessProbe:
            exec:
              command: ["sh", "-c", "pg_isready -U postgres -d ${POSTGRES_DB} -h 127.0.0.1 -p 5432"]
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5

  volumeClaimTemplates:
    - metadata:
        name: user-db-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
