infra/k8s/user-manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-manager
  namespace: dsbd-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-manager
  template:
    metadata:
      labels:
        app: user-manager
    spec:
      containers:
        - name: user-manager
          image: user-manager:hw3
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5000
            - name: grpc
              containerPort: 50051
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: user-manager
  namespace: dsbd-ns
spec:
  selector:
    app: user-manager
  type: ClusterIP
  ports:
    - name: http
      port: 5000
      targetPort: 5000
    - name: grpc
      port: 50051
      targetPort: 50051
