infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dsbd-ingress
  namespace: dsbd-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /users(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: user-manager
                port:
                  number: 5000
          - path: /collector(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: data-collector
                port:
                  number: 5001
